# rust-aicost

./: .gitignore  Cargo.toml  README.md
docs/for-llm/: doc-for-llm.md
pricer/: config.json  gen-json.aip  gen-rs.aip  genrs.aip  instructions.md  main.aip
pricer/data/: pricing-anthropic.json  pricing-anthropic.md  pricing-deepseek.json  pricing-deepseek.md  pricing-fireworks.json  pricing-fireworks.md  pricing-gemini.json  pricing-gemini.md  pricing-groq.json  pricing-groq.md  pricing-kimi.json  pricing-kimi.md  pricing-mimo.json  pricing-mimo.md  pricing-minimax.json  pricing-minimax.md  pricing-openai.json  pricing-openai.md  pricing-together.json  pricing-together.md  pricing-xai.json  pricing-xai.md  pricing-zai.json  pricing-zai.md
pricer/lua/: pricing_utils.lua
src/: cost.rs  error.rs  lib.rs  model.rs
src/data/: data_anthropic.rs  data_deepseek.rs  data_fireworks.rs  data_gemini.rs  data_groq.rs  data_kimi.rs  data_mimo.rs  data_minimax.rs  data_openai.rs  data_together.rs  data_xai.rs  data_zai.rs  mod.rs
