[package]
name = "aicost"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- AI
# for now use the genai::Usage exclusively
genai = { version = "=0.6.0-beta.20" }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
