[package]
name = "aicost"
version = "0.2.0"
description = "Compute LLM usage costs based on the genai::Usage type."
license = "MIT OR Apache-2.0"
keywords = ["genai", "openai", "anthropic", "gemini", "utility"]
edition = "2024"
rust-version = "1.95"
homepage = "https://github.com/jeremychone/rust-aicost"
repository = "https://github.com/jeremychone/rust-aicost"

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- AI
# for now use the genai::Usage exclusively
genai = { version = "0.7.0-beta" }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
tracing = "0.1"
